namespace Opcion1LosBorbotones.Domain.Validator.Exceptions;

public enum SeverityLevel
{
    Low,
    Medium,
    High,
    Critical
}
